hopefully fixed powershell typo in windows dockerfile

--- a/DockerBuildContainers/Windows-Cygwin/Dockerfile
+++ b/DockerBuildContainers/Windows-Cygwin/Dockerfile
@@ -31,7 +31,7 @@ SHELL ["powershell"]
 
 RUN \
     Set-ExecutionPolicy Bypass -Scope Process -Force; \
-    $ErrorActionPreference = "Stop"; \
+    $ErrorActionPreference = 'Stop'; \
     [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.ServicePointManager]::SecurityProtocol -bor 3072; \
     iex ((New-Object System.Net.WebClient).DownloadString('https://community.chocolatey.org/install.ps1'))
 
