--- a/ThirdPartyComponents/lzma/Makefile
+++ b/ThirdPartyComponents/lzma/Makefile
@@ -39,6 +39,11 @@ FETCHURLS+=http://www.7-zip.org/a/$(BASENAME).7z
 FETCHURLS+=https://sourceforge.net/projects/sevenzip/files/LZMA%20SDK/$(BASENAME).7z
 
 
+#not parallel because submakefiles use parallelism, but generally best to sequence these top level requests. Like if you say
+# make clobber all you don't want those to happen at the same time. And make libraries samples wouldn't really work since all the libraries
+# have to be built before the samples etc...
+.NOTPARALLEL:
+
 PER_CONFIGURATION_BUILDS_DIR:=$(shell realpath --canonicalize-missing ../../Builds/$(CONFIGURATION)/ThirdPartyComponents/)/
 
 #lose trailing / on PER_CONFIGURATION_THIS_INTERMEDIATEFILES_DIR_NOSLASH_ because on macos make THATDIR doesn't work with trailing slash (old WEIRD_MACOS_MAKEFILE_DIR_BUG -  MacOS XCode 10 - GNU Make 3.81)
